# item-price-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  scrapy.cfg
.github/: CODEOWNERS
src/item_price_scraper/: data_models.py  item_loaders.py  main.py  middlewares.py  pipelines.py  settings.py
src/item_price_scraper/spiders/: item_price.py
