[tool.poetry]
name = "item-price-scraper"
version = "0.0.1"
description = ""
authors = ["Karolis Kontrimas <karolis.kontrimas@gmail.com>"]
readme = "README.md"
packages = [{include = "item_price_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"
mypy = "^1.4.1"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
